workspace-sf/force-app/main/default/objects/CriticaContrato__c/CriticaContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as críticas do contrato</description>
    <label>Crítica do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Críticas do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>