workspace-sf/force-app/main/default/objects/CriticaContrato__c/fields/MensagemCliente__c.field-meta.xml
<CustomField>
    <fullName>MensagemCliente__c</fullName>
    <label>Mensagem cliente</label>
    <type>TextArea</type>
</CustomField>