workspace-sf/force-app/main/default/objects/CriticaContrato__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ODM</fullName>
            </value>
            <value>
                <fullName>Sinapse</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>ProtocoloWeb</fullName>
                <label>Protocolo Web</label>
            </value>
            <value>
                <fullName>Stargate</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>PortoPag</fullName>
            </value>
            <value>
                <fullName>HUB</fullName>
            </value>
            <value>
                <fullName>SERASA</fullName>
            </value>
            <value>
                <fullName>HEROKU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>