workspace-sf/force-app/main/default/objects/CriticaContrato__c/fields/Parecer__c.field-meta.xml
<CustomField>
    <fullName>Parecer__c</fullName>
    <label>Parecer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>