workspace-sf/force-app/main/default/objects/CriticaContrato__c/fields/Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Procedimento__c</fullName>
    <label>Procedimento</label>
    <type>TextArea</type>
</CustomField>