workspace-sf/force-app/main/default/objects/CriticaContrato__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Não iniciada</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Condicionada</fullName>
            </value>
            <value>
                <fullName>Inconclusiva</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Pendenciado</fullName>
            </value>
            <value>
                <fullName>Falha na Integração</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>